quest-sys/QuEST/QuEST/include/QuEST.h

    
typedef struct {
    char* buffer;       
    int bufferSize;     
    int bufferFill;     
    int isLogging;      
} QASMLogger;
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
typedef struct Complex
{
    qreal real;
    qreal imag;
} Complex;
typedef struct ComplexMatrix2
{
    qreal real[2][2];
    qreal imag[2][2];
} ComplexMatrix2;
typedef struct Qureg
{
    int isDensityMatrix;
    int numQubitsRepresented;
    int numQubitsInStateVec;
    long long int numAmpsPerChunk;
    long long int numAmpsTotal;
    int chunkId;
    int numChunks;
    ComplexArray stateVec; 
    ComplexArray pairStateVec;
    ComplexArray deviceStateVec;
    qreal *firstLevelReduction, *secondLevelReduction;
    QASMLogger* qasmLog;
} Qureg;
typedef struct QuESTEnv
{
    int rank;
    int numRanks;
    unsigned long int* seeds;
    int numSeeds;
} QuESTEnv;
Qureg createQureg(int numQubits, QuESTEnv env);
Qureg createCloneQureg(Qureg qureg, QuESTEnv env);
void initBlankState(Qureg qureg);
void initPlusState(Qureg qureg);
void initClassicalState(Qureg qureg, long long int stateInd);
void initPureState(Qureg qureg, Qureg pure);
void initDebugState(Qureg qureg);
void initStateFromAmps(Qureg qureg, qreal* reals, qreal* imags);
void setAmps(Qureg qureg, long long int startInd, qreal* reals, qreal* imags, long long int numAmps);
void cloneQureg(Qureg targetQureg, Qureg copyQureg);
void phaseShift(Qureg qureg, int targetQubit, qreal angle);
void controlledPhaseShift(Qureg qureg, int idQubit1, int idQubit2, qreal angle);
void multiControlledPhaseShift(Qureg qureg, int *controlQubits, int numControlQubits, qreal angle);
qreal getProbAmp(Qureg qureg, long long int index);
void unitary(Qureg qureg, int targetQubit, ComplexMatrix2 u);
void setWeightedQureg(Complex fac1, Qureg qureg1, Complex fac2, Qureg qureg2, Complex facOut, Qureg out);
void invalidQuESTInputError(const char* errMsg, const char* errFunc);