quest-sys/src/bindings.rs

extern "C" {
    #[doc = " Initialise \\p qureg into the plus state."]
    #[doc = ""]
    #[doc = " If \\p qureg is a state-vector of \\f$N\\f$ qubits, it is modified to state"]
    #[doc = " \\f["]
    #[doc = "   {| + \\rangle}^{\\otimes N} = \\frac{1}{\\sqrt{2^N}} (| 0 \\rangle + | 1 \\rangle)^{\\otimes N}\\,."]
    #[doc = " \\f]"]
    #[doc = " If \\p qureg is a density matrix of \\f$N\\f$ qubits, it is modified to state"]
    #[doc = " \\f["]
    #[doc = "   {| + \\rangle\\langle+|}^{\\otimes N} = \\frac{1}{{2^N}} \\sum_i\\sum_j |i\\rangle\\langle j|\\,."]
    #[doc = " \\f]"]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in,out] qureg the object representing the set of qubits to be initialised"]
    #[doc = " @author Ania Brown (state-vector)"]
    #[doc = " @author Tyson Jones (density matrix, doc)"]
    pub fn initPlusState(qureg: Qureg);
}
extern "C" {
    #[doc = " Initialise \\p qureg into the classical state (also known as a"]
    #[doc = " \"computational basis state\") with index \\p stateInd."]
    #[doc = ""]
    #[doc = " If \\p qureg is a state-vector, it will become"]
    #[doc = "      \\f$ | \\text{stateInd} \\rangle \\f$. \\n"]
    #[doc = " If \\p qureg is a density matrix, it will become"]
    #[doc = "      \\f$ | \\text{stateInd} \\rangle \\langle \\text{stateInd} | \\f$."]
    #[doc = ""]
    #[doc = " Classical states are indexed from zero, so that \\p stateInd <b>= 0</b> produces"]
    #[doc = " \\f$ | 00 \\dots 00 \\rangle \\f$,"]
    #[doc = " and  \\p stateInd <b>= 1</b> produces \\f$ | 00 \\dots 01 \\rangle \\f$, and"]
    #[doc = " \\p stateInd <b>=</b> \\f$ 2^N - 1 \\f$ produces"]
    #[doc = " \\f$ | 11 \\dots 11 \\rangle \\f$."]
    #[doc = ""]
    #[doc = " Subsequent calls to getProbAmp() will yield 0 for all indices except \\p stateInd,"]
    #[doc = " and the phase of \\p stateInd's amplitude will be 1 (real)."]
    #[doc = ""]
    #[doc = " This function can be used to initialise \\p qureg into a specific binary state"]
    #[doc = " (e.g. \\p 11001) using a binary literal (supported by only some compilers):"]
    #[doc = " ```"]
    #[doc = "      initClassicalState(qureg, 0b11001);"]
    #[doc = " ```"]
    #[doc = " \\n"]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - initPureState()"]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in,out] qureg the ::Qureg to modify"]
    #[doc = " @param[in] stateInd the index of the basis state to modify \\p qureg into"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p stateInd is outside <b>[0, </b>`qureg.numQubitsRepresented`<b>)</b>"]
    #[doc = " @author Tyson Jones"]
    pub fn initClassicalState(qureg: Qureg, stateInd: ::std::os::raw::c_longlong);
}
extern "C" {
    #[doc = " Initialise \\p qureg into to a given pure state of an equivalent Hilbert dimension."]
    #[doc = ""]
    #[doc = " If \\p qureg is a state-vector, this merely clones \\p pure into \\p qureg. \\n"]
    #[doc = " If \\p qureg is a density matrix, this makes \\p qureg 100% likely to be in the \\p pure state."]
    #[doc = ""]
    #[doc = " ::Qureg \\p pure is not modified."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - initClassicalState()"]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in,out] qureg the ::Qureg to modify"]
    #[doc = " @param[in] pure a state-vector containing the pure state into which to initialise \\p qureg"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg and \\p pure have mismatching dimensions"]
    #[doc = " - if \\p pure is a density matrix"]
    #[doc = " @author Tyson Jones"]
    pub fn initPureState(qureg: Qureg, pure_: Qureg);
}
extern "C" {
    #[doc = " Initialises \\p qureg to be in the un-normalised, non-physical state with"]
    #[doc = " with \\f$n\\f$-th complex amplitude given by \\f$2n/10 + i(2n+1)/10\\f$."]
    #[doc = ""]
    #[doc = " This is used internally for debugging and testing."]
    #[doc = ""]
    #[doc = " @ingroup debug"]
    #[doc = " @param[in,out] qureg the register to have its amplitudes overwritten"]
    #[doc = " @author Ania Brown"]
    #[doc = " @author Tyson Jones (doc)"]
    pub fn initDebugState(qureg: Qureg);
}
extern "C" {
    #[doc = " Initialise \\p qureg by specifying all amplitudes."]
    #[doc = " For density matrices, it is assumed the amplitudes have been flattened"]
    #[doc = " column-wise into the given arrays."]
    #[doc = ""]
    #[doc = " The real and imaginary components of the amplitudes are passed in separate arrays,"]
    #[doc = " \\p reals and \\p imags,"]
    #[doc = " each of which must have length `qureg.numAmpsTotal`."]
    #[doc = " There is no automatic checking that the passed arrays are L2 normalised, so this"]
    #[doc = " can be used to prepare \\p qureg in a non-physical state."]
    #[doc = ""]
    #[doc = " In distributed mode, this would require the complete state to fit in"]
    #[doc = " every node. To manually prepare a state for which all amplitudes cannot fit into a single node,"]
    #[doc = " use setAmps()"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - setAmps()"]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in,out] qureg the ::Qureg to overwrite"]
    #[doc = " @param[in] reals array of the real components of the new amplitudes"]
    #[doc = " @param[in] imags array of the imaginary components of the new amplitudes"]
    #[doc = " @throws segmentation-fault"]
    #[doc = " - if either \\p reals or \\p imags have fewer than `qureg.numAmpsTotal` elements"]
    #[doc = " @author Tyson Jones"]
    pub fn initStateFromAmps(qureg: Qureg, reals: *mut f64, imags: *mut f64);
}
extern "C" {
    #[doc = " Overwrites a subset of the amplitudes in state-vector \\p qureg, with those passed in \\p reals and \\p imags."]
    #[doc = ""]
    #[doc = " Only amplitudes with indices in <b>[</b>\\p startInd<b>,</b> \\p startInd <b>+</b> \\p numAmps<b>]</b>"]
    #[doc = " will be changed. The resulting \\p qureg may not necessarily be in an L2 normalised state."]
    #[doc = ""]
    #[doc = " In distributed mode, this function assumes the subset \\p reals and \\p imags exist"]
    #[doc = " (at least) on the node containing the ultimately updated elements.\\n"]
    #[doc = " For example, below is the correct way to modify the full 8 elements of \\p qureg"]
    #[doc = " when split between 2 nodes."]
    #[doc = " ```"]
    #[doc = "     Qureg qureg = createQureg(3, env);"]
    #[doc = ""]
    #[doc = "     long long int numAmps = 4;"]
    #[doc = "     qreal re[] = {1,2,3,4};"]
    #[doc = "     qreal im[] = {1,2,3,4};"]
    #[doc = "     setAmps(qureg, 0, re, im, numAmps);"]
    #[doc = ""]
    #[doc = "     // modify re and im to the next set of elements"]
    #[doc = "     for (int i=0; i<4; i++) {"]
    #[doc = "       re[i] += 4;"]
    #[doc = "       im[i] += 4;"]
    #[doc = "     }"]
    #[doc = "     setAmps(qureg, 4, re, im, numAmps);"]
    #[doc = " ```"]
    #[doc = " \\n"]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - setWeightedQureg()"]
    #[doc = " - initStateFromAmps()"]
    #[doc = " - initBlankState()"]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in,out] qureg the state-vector to modify"]
    #[doc = " @param[in] startInd the index of the first amplitude in \\p qureg to modify"]
    #[doc = " @param[in] reals array of the real components of the new amplitudes"]
    #[doc = " @param[in] imags array of the imaginary components of the new amplitudes"]
    #[doc = " @param[in] numAmps the length of each of the reals and imags arrays."]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg is not a state-vector (i.e. is a density matrix)"]
    #[doc = " - if \\p startInd is outside [0, `qureg.numAmpsTotal`]"]
    #[doc = " - if \\p numAmps is outside [0, `qureg.numAmpsTotal`]"]
    #[doc = " - if \\p numAmps + \\p startInd >= `qureg.numAmpsTotal`"]
    #[doc = " @author Tyson Jones"]
    pub fn setAmps(
        qureg: Qureg,
        startInd: ::std::os::raw::c_longlong,
        reals: *mut f64,
        imags: *mut f64,
        numAmps: ::std::os::raw::c_longlong,
    );
}
extern "C" {
    #[doc = " Overwrite the amplitudes of \\p targetQureg with those from \\p copyQureg."]
    #[doc = ""]
    #[doc = " Registers must either both be state-vectors, or both be density matrices, and"]
    #[doc = " of equal dimensions."]
    #[doc = " Only the quantum state is cloned, while auxilary info (like recorded QASM) is unchanged."]
    #[doc = " copyQureg is unaffected."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createCloneQureg()"]
    #[doc = " - initPureState()"]
    #[doc = " - setWeightedQureg()"]
    #[doc = ""]
    #[doc = " @ingroup init"]
    #[doc = " @param[in, out] targetQureg the qureg to have its quantum state overwritten"]
    #[doc = " @param[in] copyQureg the qureg to have its quantum state cloned into targetQureg."]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p targetQureg is a state-vector while \\p copyQureg is a density matrix (and vice versa)"]
    #[doc = " - if \\p targetQureg and \\p copyQureg have different dimensions"]
    #[doc = " @author Tyson Jones"]
    pub fn cloneQureg(targetQureg: Qureg, copyQureg: Qureg);
}
extern "C" {
    #[doc = " Shift the phase between \\f$ |0\\rangle \\f$ and \\f$ |1\\rangle \\f$ of a single qubit by a given angle."]
    #[doc = ""]
    #[doc = " > This is equivalent to a Z-axis rotation of the Bloch-sphere up to a global phase factor."]
    #[doc = " For angle \\f$\\theta\\f$, this effects single-qubit unitary"]
    #[doc = " \\f["]
    #[doc = " \\begin{pmatrix}"]
    #[doc = " 1 & 0 \\\\"]
    #[doc = " 0 & \\exp(i \\theta)"]
    #[doc = " \\end{pmatrix}"]
    #[doc = " \\f]"]
    #[doc = " with circuit diagram"]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-4, 0) {targetQubit};"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (-1, 0);"]
    #[doc = "\\draw (1, 0) -- (2, 0);"]
    #[doc = "\\draw (-1,-1)--(-1,1)--(1,1)--(1,-1)--cycle;"]
    #[doc = "\\node[draw=none] at (0, 0) {$R_\\theta$};"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - controlledPhaseShift()"]
    #[doc = " - multiControlledPhaseShift()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] targetQubit qubit to undergo a phase shift"]
    #[doc = " @param[in] angle amount by which to shift the phase in radians"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - \\p targetQubit is outside [0, \\p qureg.numQubitsRepresented)."]
    #[doc = " @author Tyson Jones"]
    pub fn phaseShift(qureg: Qureg, targetQubit: ::std::os::raw::c_int, angle: f64);
}
